Use initial padding on ul.products to prevent the grid from being shifted to the right

--- a/src/sass/woocommerce/layouts/_product-archive.scss
+++ b/src/sass/woocommerce/layouts/_product-archive.scss
@@ -79,6 +79,8 @@
     column-gap: $wc-archive-column-gap;
     row-gap: $wc-archive-row-gap;
     grid-template-columns: repeat( auto-fill, minmax( $wc-shop-product-min-width-md, 1fr ) );
+    padding-left: initial;
+    padding-right: initial;
     clear: both;
 
     &.columns-1 { // Small
